--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
-            More Research
+            More Research from our Group
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="https://github.com/cvjena">
-              Computer Vision Group Jena
+            <a class="navbar-item" href="https://eifer-mam.github.io/">
+              Eifer
             </a>
             <a class="navbar-item" href="https://arxiv.org/abs/2402.09305">
               Causal Pretraining
