--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
         </a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
-            More Research from our Group
+            More Research from us
           </a>
           <div class="navbar-dropdown">
             <a class="navbar-item" href="https://eifer-mam.github.io/">
-              Eifer
+              CVPR 2025 - Eifer
+            </a>
+            <a class="navbar-item" href="https://fastcav.github.io/">
+              ICML 2025 - FastCav
             </a>
             <a class="navbar-item" href="https://arxiv.org/abs/2402.09305">
               Causal Pretraining
