--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </a>
           <div class="navbar-dropdown">
             <a class="navbar-item" href="https://eifer-mam.github.io/">
-              CVPR 2025 - Eifer
+              CVPR 2025 - EIFER
             </a>
             <a class="navbar-item" href="https://fastcav.github.io/">
               ICML 2025 - FastCav
