--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <h2 class="title is-3">Related Links</h2>
           <div class="content has-text-justified">
             <p>
-              While Causal Rivers is, by far, the largest causal discovery benchmark for time series from real-world data, the more benchmarking the better! While we are not connected to these projects, we specifically encourage to also test your methods on:
+              The more benchmarking the better! While we are not connected to these projects, we specifically encourage to also test your methods on:
             </p>
             <ul>
               <li><a href="https://proceedings.mlr.press/v236/mogensen24a.html">Causal discovery in a complex industrial system: A time series benchmark</a></li>
