--- a/index.html
+++ b/index.html
@@ -52,10 +52,13 @@
           </a>
           <div class="navbar-dropdown">
             <a class="navbar-item" href="https://eifer-mam.github.io/">
-              CVPR 2025 - EIFER
+              CVPR 2025 - EIFER: lectromyography-Informed Facial Expression Reconstruction For Physiological-Based Synthesis and Analysis 
             </a>
             <a class="navbar-item" href="https://fastcav.github.io/">
-              ICML 2025 - FastCav
+              ICML 2025 - FastCav: Efficient Computation of Concept Activation Vectors for Explaining Deep Neural Networks
+            </a>
+            <a class="navbar-item" href="https://propgrad.github.io/">
+              WACV 2026 - Locally Explaining Prediction Behavior via Gradual Interventions and Measuring Property Gradients 
             </a>
             <a class="navbar-item" href="https://arxiv.org/abs/2402.09305">
               Causal Pretraining
